First working implementation

--- a/index.html
+++ b/index.html
@@ -122,12 +122,11 @@
 
         <div id="controls">
             <button class="btn btn-dark" onclick="loadEasy()">Load Easy</button>
-            <button class="btn btn-dark">Load Medium</button>
-            <button class="btn btn-dark">Load Difficult</button>
+            <button class="btn btn-dark" onclick="loadMedium()">Load Medium</button>
+            <button class="btn btn-dark" onclick="loadHard()">Load Difficult</button>
+            <button class="btn btn-light" onclick="solve(0,1)">Solve</button>
         </div>
         
-
-
         <script src="main.js"></script>
     </body>
 </html>
