Cleaning up code

--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
             <button class="btn btn-dark" onclick="loadMedium()">Load Medium Example</button>
             <button class="btn btn-dark" onclick="loadHard()">Load Difficult Example</button>
             <button class="btn btn-light" onclick="solveButton()">Solve</button>
-            <button class="btn btn-danger" onclick="clearButton()">Clear</button>
+            <button class="btn btn-danger" onclick="clearButton();clearButton()">Clear</button>
         </div>
         
         <script src="main.js"></script>
