--- a/index.html
+++ b/index.html
@@ -8,13 +8,16 @@
         <meta name="description" content="Sudoku Solver">
         <meta name="author" content="Paul Lewis">
 
+        <link rel="preconnect" href="https://fonts.gstatic.com">
+<link href="https://fonts.googleapis.com/css2?family=Fredoka+One&family=Roboto:wght@300&display=swap" rel="stylesheet">
+
         <link rel="stylesheet" href="index.css">
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 
     </head>
 
     <body>
-        <h1>Sudoku Solver</h1>
+        <h1 id="title">Sudoku Solver</h1>
 
         <div class="box">
             <table contenteditable>
@@ -120,14 +123,32 @@
             </table>
         </div>
 
-        <div id="controls">
-            <button class="btn btn-dark" onclick="loadEasy()">Load Easy Example</button>
-            <button class="btn btn-dark" onclick="loadMedium()">Load Medium Example</button>
-            <button class="btn btn-dark" onclick="loadHard()">Load Difficult Example</button>
-            <button class="btn btn-light" onclick="solveButton()">Solve</button>
-            <button class="btn btn-danger" onclick="clearButton();clearButton()">Clear</button>
+        <div>
+            <canvas id="canvas">Canvas could not display</canvas>
         </div>
+
+        <div id="controls">
+
+            <h3>Controls</h3>
+            <p>Use the buttons below to load example sudoku puzzles or input your own directly into the table.</p>
+            <p>Press Solve to start the backtracking algorithm.</p>
+            <p>Press Reset to clear the board and start a new puzzle.</p>
+            <p>More difficult puzzles may take longer to solve. Watch the search progress visualized in the righthand graphic.</p>
+            <a href="https://paullewis2013.github.io/Portfolio/">Return to Portfolio</a><br>
+            <br>
+            <div id=buttons>
+                <button class="btn btn-secondary" onclick="loadEasy()">Load Easy Example</button><br>
+                <button class="btn btn-secondary" onclick="loadMedium()">Load Medium Example</button><br>
+                <button class="btn btn-secondary" onclick="loadHard()">Load Difficult Example</button><br>
+                <button class="btn btn-info" onclick="solveButton()">Solve</button><br>
+                <button class="btn btn-danger" onclick="clearButton()">Reset</button><br>
+            </div>
+        </div>
+
+
+
         
         <script src="main.js"></script>
+        <!-- <script src="canvas.js"></script> -->
     </body>
 </html>
