--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         <meta name="author" content="Paul Lewis">
 
         <link rel="preconnect" href="https://fonts.gstatic.com">
-<link href="https://fonts.googleapis.com/css2?family=Fredoka+One&family=Roboto:wght@300&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css2?family=Fredoka+One&family=Roboto:wght@300&display=swap" rel="stylesheet">
 
         <link rel="stylesheet" href="index.css">
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
@@ -130,10 +130,10 @@
         <div id="controls">
 
             <h3>Controls</h3>
-            <p>Use the buttons below to load example sudoku puzzles or input your own directly into the table.</p>
+            <p>Use the buttons below to load example sudoku puzzles or input your own by typing numbers [0-9] in the cells of the table.</p>
             <p>Press Solve to start the backtracking algorithm.</p>
             <p>Press Reset to clear the board and start a new puzzle.</p>
-            <p>More difficult puzzles may take longer to solve. Watch the search progress visualized in the righthand graphic.</p>
+            <p>More difficult puzzles may take longer to solve. You can watch the search progress visualized in the righthand graphic.</p>
             <a href="https://paullewis2013.github.io/Portfolio/">Return to Portfolio</a><br>
             <br>
             <div id=buttons>
